# search-agents

./: .env.example  README.md  pyproject.toml
docs/: OPERATIONS.md  TEAM_PROTOCOL.md
docs/agents/cc/: agents.md  heartbeat.md  playbook.md  skills.md  soul.md
docs/agents/job_hunter/: agents.md  heartbeat.md  playbook.md  skills.md  soul.md
src/multi_agents/: __init__.py  cli.py  config.py  skills.py  team.py  telegram_bot.py
src/multi_agents/agents/: base.py  cc.py  job_hunter.py
tests/: test_job_hunter.py  test_team.py
