[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search-agents"
version = "0.1.0"
description = "Proactive multi-agent team with Job Hunter + CC and Telegram control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.2",
  "python-telegram-bot>=21.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[project.scripts]
search-agents = "multi_agents.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
